Speed & a11y issues: Inlined critical css, fixed color contrast issues, navigation labeling

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -18,7 +18,7 @@
 	--brand-color--l: hsla(44, 100%, 54%, 0.24);
 	--heading-color: hsla(44, 20%, 10%, 1.0);
 	--text-color: hsla(44, 0%, 10%, 0.82);
-	--meta-color: hsla(44, 0%, 26%, 0.66);
+	--meta-color: hsla(44, 0%, 26%, 0.76);
 	--red-color: hsla(359, 84%, 44%, 1.0);
 	--light-gray-color: hsla(44, 0%, 26%, 0.08);
 
